Add Reset and Clear buttons

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <body>
 	<canvas></canvas>
 	<button id="transformation-button">Apply Linear Transformation</button>
+	<button id="reset-button">Reset Canvas</button>
+	<button id="clear-button">Clear Canvas</button>
 	<!-- <script src="bouncing_ball.js"></script> -->
 	<!-- <script src="interactive_canvas.js"></script> -->
 	<script src="2D_vector_space.js"></script>
