--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<title>Canvas</title>
-	<style>
-		canvas {
-			border: 1px solid #000;
-			/* background-color: green; */
-		}
-	</style>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<canvas></canvas>
-	<button id="transformation-button">Apply Linear Transformation</button>
-	<button id="reset-button">Reset Canvas</button>
-	<button id="clear-button">Clear Canvas</button>
-	<!-- <script src="bouncing_ball.js"></script> -->
-	<!-- <script src="interactive_canvas.js"></script> -->
+	<div id="buttons">
+		<button id="transformation-button">Apply Linear Transformation</button>
+		<button id="reset-button">Reset Canvas</button>
+		<button id="clear-button">Clear Canvas</button>
+	</div>
 	<script src="2D_vector_space.js"></script>
 </body>
 </html>
