--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	<h1>2D Vector Space Visualization</h1>
 	<canvas></canvas>
 	<div id="buttons">
 		<button id="transformation-button">Apply Linear Transformation</button>
 		<button id="reset-button">Reset Canvas</button>
 		<button id="clear-button">Clear Canvas</button>
 	</div>
+	<p>For more info: <a href="https://github.com/erzloh/2D-Vector-Space-Visualization" target="_blank">GitHub repo</a></p>
+	<footer>
+		&copy; 2023 Eric Holzer. All Rights Reserved.
+  	</footer>
 	<script src="2D_vector_space.js"></script>
 </body>
 </html>
