--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	<h1>2D Vector Space Visualization</h1>
 	<canvas></canvas>
 	<div id="buttons">
-		<button id="transformation-button">Apply Linear Transformation</button>
-		<button id="reset-button">Reset Canvas</button>
-		<button id="clear-button">Clear Canvas</button>
+		<button id="transformation-button">transform</button>
+		<button id="reset-button">reset</button>
+		<button id="clear-button">clear</button>
 	</div>
 	<p>For more info: <a href="https://github.com/erzloh/2D-Vector-Space-Visualization" target="_blank">GitHub repo</a></p>
 	<footer>
